--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
@@ -25,12 +25,12 @@
 			<h3>Welcome To RANCHI</h3>
 			<h1>DO COME & VISIT <span class="change_content"> </span> <span style="margin-top: -10px;"> | </span> </h1>
 			<p>"Ranchi once is not enough"</p>
-			<a href="#" class="btnone">Dassam Falls</a>
-			<a href="#" class="btntwo">Jonha Falls</a>
-			<a href="#" class="btnone">Birsa Zoological park</a>
-			<a href="#" class="btntwo">Patratu Vally</a>
-			<a href="#" class="btnone">Rock Garden</a>
-			<a href="#" class="btntwo">Jagannath Temple</a>
+			<a href="https://en.wikipedia.org/wiki/Dassam_Falls" class="btnone">Dassam Falls</a>
+			<a href="https://www.tripadvisor.in/Attraction_Review-g662320-d3218641-Reviews-Jonha_Falls-Ranchi_Ranchi_District_Jharkhand.html" class="btntwo">Jonha Falls</a>
+			<a href="http://birsazoojharkhand.in/" class="btnone">Birsa Zoological park</a>
+			<a href="https://www.tripadvisor.in/Attraction_Review-g662320-d10509592-Reviews-Patratu_Valley-Ranchi_Ranchi_District_Jharkhand.html" class="btntwo">Patratu Vally</a>
+			<a href="https://ranchi.nic.in/tourist-place/rock-garden/" class="btnone">Rock Garden</a>
+			<a href="https://www.holidify.com/places/ranchi/jagannath-temple-sightseeing-122290.html" class="btntwo">Jagannath Temple</a>
 		</section>
 	</main>
 
